--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <menu>
+        <h1>Tay Swift</h1>
+    </menu>
 </body>
 </html>
