--- a/index.html
+++ b/index.html
@@ -7,8 +7,25 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <menu>
-        <h1>Tay Swift</h1>
-    </menu>
+    <header>
+        <div class="container">
+        </div>
+
+        <div class="logo"><img src="Img/taylor swift _ the tortured poets department.jpg">
+        </div>
+        
+        <div class="menu">
+            <nav>
+                <a href="#">Who is Taylor Swift?</a>
+                <a href="#">Álbuns</a>
+                <a href="#">Carreira</a>
+            </nav>
+        </div> 
+
+        <div class="sociais">
+
+        </div>
+
+    </header>
 </body>
 </html>
